--- a/pearsoncorrelation.htm
+++ b/pearsoncorrelation.htm
@@ -22,7 +22,7 @@
 
 	</div>
 
-    <script src="output.js"></script>
+    <script src="../output.js"></script>
     <script src="pearsoncorrelation.js"></script>
     <script src="pearsoncorrelationpage.js"></script>
 
